Fixing the background to appear the same on each page when viewed on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
-body {
+.background {
 	background: url('tourdehusker/page_background.jpg') no-repeat left center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
 	background-size: cover;
 	padding: 0;
 	margin: 0;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	overflow-y: scroll;
 }
 
 header {
